--- a/accelerate/config_ddp.yaml
+++ b/accelerate/config_ddp.yaml
@@ -31,7 +31,7 @@ distributed_type: MULTI_GPU
 # Hardware configuration
 gpu_ids: all
 num_machines: 1
-num_processes: 4  # Adjust to your GPU count
+num_processes: 4
 
 # Multi-node settings (when num_machines > 1)
 machine_rank: 0
